# carbo-verdant

./: .gitignore  README.md  main.py  pyproject.toml
config/: inputs.py
data/: example_polygon_1.geojson  example_polygon_2.geojson
notebooks/: eda.ipynb
utils/sentinel_hub/: evalscript.py  requests.py  search.py
