[project]
name = "carbo-verdant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "sentinelhub>=3.11.5",
    "shapely>=2.1.2",
]
